Add button functionality without game

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <style rel="stylesheet" href="styles.css"></style>
 </head>
 <body>
-    
+   <button class="weapon" data-type="rock"></button> 
+   <button class="weapon" data-type="paper"></button>
+   <button class="weapon" data-type="scissors"></button>
 </body>
 
 <script src="script.js"></script>
