--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <style rel="stylesheet" href="styles.css"></style>
 </head>
 <body>
-   <button class="weapon" data-type="rock"></button> 
-   <button class="weapon" data-type="paper"></button>
-   <button class="weapon" data-type="scissors"></button>
+    <div class="container">
+        <h1 class="heading">Play now!</h1>
+        <div class="results-container">
+            <h2 class="player-selection">First to 5 wins!</h2>
+            <h2 class="computer-selection">bruh</h2>
+            <p class="score">Player: 0 Computer: 0</p>
+        </div>
+        <div class="button-container">
+            <button class="weapon" data-type="rock">ROCK</button> 
+            <button class="weapon" data-type="paper">PAPER</button>
+            <button class="weapon" data-type="scissors">SCISSORS</button>
+        </div>
+    </div>
+
+
 </body>
 
 <script src="script.js"></script>
