--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
-    <style rel="stylesheet" href="styles.css"></style>
+    <title>Fire Grass Water</title>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
     <div class="container">
@@ -16,9 +16,9 @@
             <p class="score">Player: 0 Computer: 0</p>
         </div>
         <div class="button-container">
-            <button class="weapon" data-type="rock">ROCK</button> 
-            <button class="weapon" data-type="paper">PAPER</button>
-            <button class="weapon" data-type="scissors">SCISSORS</button>
+            <button class="weapon" data-type="fire">FIRE</button> 
+            <button class="weapon" data-type="grass">GRASS</button>
+            <button class="weapon" data-type="water">WATER</button>
         </div>
     </div>
 
