--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Play now!</h1>
+        <div class="heading-container">
+            <h1>FIRE, GRASS, WATER</h1>
+        </div>
+        <div class="score-container">
+            <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
+            <h2 id="computer-health">COMPUTER: ❤️❤️❤️❤️❤️ </h2>
+        </div>
         <div class="results-container">
-            <h2 class="player-selection">First to 5 wins!</h2>
-            <h2 class="computer-selection">bruh</h2>
-            <p class="score">Player: 0 Computer: 0</p>
+            <h2 class="player-selection">PLAYER and COMPUTER stare at each other...</h2>
+            <h2 class="computer-selection">menacingly...</h2>
+            <h2 id="result-text"></h2>
         </div>
         <div class="button-container">
             <button class="weapon" data-type="fire">FIRE</button> 
