Add end screen skeleton

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <button class="weapon" data-type="water">WATER</button>
         </div>
     </div>
+    <div class="end-screen" id="end-screen-container">
+        <div id="end-screen-content">
+            <h2 id="end-screen-text"></h2>
+            <div class="button id="replay-button">Play Again</div>
+        </div>
+    </div>
 
 
 </body>
