--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fire Grass Water</title>
     <link rel="stylesheet" href="styles.css"></link>
+    <link rel="icon" href="/images/pixel-fight-favicon.ico">
 </head>
 <body>
     <div class="container">
         <div class="heading-container">
-            <h1>FIRE, GRASS, WATER</h1>
+            <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
         </div>
         <div class="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
@@ -22,15 +23,15 @@
             <h2 id="result-text"></h2>
         </div>
         <div class="button-container">
-            <button class="weapon" data-type="fire">FIRE</button> 
-            <button class="weapon" data-type="grass">GRASS</button>
-            <button class="weapon" data-type="water">WATER</button>
+            <button class="weapon" data-type="fire"><img id="fire-image" src="images/pixel-art-fire.png"></button> 
+            <button class="weapon" data-type="grass"><img id="grass-image" src="images/pixel-grass.png"></button>
+            <button class="weapon" data-type="water"><img id ="water-image" src="images/pixel-water.png"></button>
         </div>
     </div>
     <div class="end-screen" id="end-screen-container">
         <div id="end-screen-content">
             <h2 id="end-screen-text"></h2>
-            <div class="button id="replay-button">Play Again</div>
+            <div class="button" id="replay-button">Play Again</div>
         </div>
     </div>
 
