--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="heading-container">
             <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
         </div>
+        <div id="fire-container">
+            <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="images/pixel-art-fire.png"></button> 
+        </div>
         <div class="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
             <h2 id="computer-health">COMPUTER: ❤️❤️❤️❤️❤️ </h2>
         </div>
+        <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="images/pixel-water.png"></button>
+        <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="images/pixel-grass.png"></button>
         <div class="results-container">
             <h2 class="player-selection">PLAYER and COMPUTER stare at each other...</h2>
             <h2 class="computer-selection">menacingly...</h2>
             <h2 id="result-text"></h2>
-        </div>
-        <div class="button-container">
-            <button class="weapon" data-type="fire"><img id="fire-image" src="images/pixel-art-fire.png"></button> 
-            <button class="weapon" data-type="grass"><img id="grass-image" src="images/pixel-grass.png"></button>
-            <button class="weapon" data-type="water"><img id ="water-image" src="images/pixel-water.png"></button>
         </div>
     </div>
     <div class="end-screen" id="end-screen-container">
