Add end screen skeleton

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             <h2 id="result-text"></h2>
         </div>
     </div>
-    <div class="end-screen" id="end-screen-container">
-        <div id="end-screen-content">
-            <h2 id="end-screen-text"></h2>
-            <div class="button" id="replay-button">Play Again</div>
-        </div>
+    <div class="end-screen overlay"></div>
+    <div class="end-screen modal">
+        <h2 id="end-screen-text">Lorem ipsum</h2>
+        <button id="restart-button">Play Again</button>
     </div>
-
-
 </body>
+<footer>
+
+</footer>
 
 <script src="script.js"></script>
 </html>
