--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fire Grass Water</title>
+    <title>Element Battle</title>
     <link rel="stylesheet" href="styles.css"></link>
     <link rel="icon" href="/images/pixel-fight-favicon.ico">
 </head>
@@ -22,7 +22,7 @@
         </div>
         <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="images/pixel-water.png"></button>
         <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="images/pixel-grass.png"></button>
-        <div class="results-container">
+        <div id="results-container">
             <h2 class="player-selection">PLAYER and COMPUTER stare at each other...</h2>
             <h2 class="computer-selection">menacingly...</h2>
             <h2 id="result-text"></h2>
