--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <link rel="icon" href="/images/pixel-fight-favicon.ico">
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <div class="heading-container">
             <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
         </div>
         <div id="fire-container">
             <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="images/pixel-art-fire.png"></button> 
         </div>
-        <div class="score-container">
+        <div id="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
             <h2 id="computer-health">COMPUTER: ❤️❤️❤️❤️❤️ </h2>
         </div>
         <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="images/pixel-water.png"></button>
         <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="images/pixel-grass.png"></button>
         <div id="results-container">
-            <h2 class="player-selection">PLAYER and COMPUTER stare at each other...</h2>
-            <h2 class="computer-selection">menacingly...</h2>
+            <h2 id="player-selection">PLAYER and COMPUTER stare at each other...</h2>
+            <h2 id="computer-selection">menacingly...</h2>
             <h2 id="result-text"></h2>
         </div>
     </div>
