Update end screen text

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
     <div class="end-screen overlay"></div>
     <div class="end-screen modal">
-        <h2 id="end-screen-text">Lorem ipsum</h2>
-        <button id="restart-button">Play Again</button>
+        <h2 id="end-screen-text"></h2>
+        <button id="restart-button">Challenge Again</button>
     </div>
 </body>
 
