--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         </div>
         <div id="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
-            <h2 id="computer-health">COMPUTER: ❤️❤️❤️❤️❤️ </h2>
+            <h2 id="computer-health">ENEMY: ❤️❤️❤️❤️❤️ </h2>
         </div>
         <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="images/pixel-water.png"></button>
         <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="images/pixel-grass.png"></button>
         <div id="results-container">
-            <h2 id="player-selection">PLAYER and COMPUTER stare at each other...</h2>
-            <h2 id="computer-selection">menacingly...</h2>
+            <h2 id="player-selection"></h2>
+            <h2 id="computer-selection"></h2>
             <h2 id="result-text"></h2>
         </div>
     </div>
     <div class="end-screen overlay"></div>
     <div class="end-screen modal">
         <h2 id="end-screen-text"></h2>
-        <button id="restart-button">Challenge Again</button>
+        <button id="restart-button">CHALLENGE AGAIN?</button>
     </div>
 </body>
 
