--- a/root/index.html
+++ b/root/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Element Battle</title>
     <link rel="stylesheet" href="styles.css"></link>
-    <link rel="icon" href="/images/pixel-fight-favicon.ico">
+    <link rel="icon" href="../images/pixel-fight-favicon.ico">
 </head>
 <body>
     <div id="container">
@@ -14,14 +14,14 @@
             <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
         </div>
         <div id="fire-container">
-            <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="images/pixel-art-fire.png"></button> 
+            <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="../images/pixel-art-fire.png"></button> 
         </div>
         <div id="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
             <h2 id="computer-health">ENEMY: ❤️❤️❤️❤️❤️ </h2>
         </div>
-        <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="images/pixel-water.png"></button>
-        <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="images/pixel-grass.png"></button>
+        <button class="weapon" data-type="water" id="water-weapon"><img id ="water-image" src="../images/pixel-water.png"></button>
+        <button class="weapon" data-type="grass" id="grass-weapon"><img id="grass-image" src="../images/pixel-grass.png"></button>
         <div id="results-container">
             <h2 id="player-selection"></h2>
             <h2 id="computer-selection"></h2>
