Modify for pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
         </div>
         <div id="fire-container">
-            <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="../images/pixel-art-fire.png"></button> 
+            <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="./images/pixel-art-fire.png"></button> 
         </div>
         <div id="score-container">
             <h2 id="player-health">PLAYER: ❤️❤️❤️❤️❤️</h2>
