--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div class="heading-container">
-            <h1 id ="heading"><span id="fire-text">FIRE</span>, <span id="grass-text">GRASS</span>, <span id="water-text">WATER</span></h1>
+            <h1 id ="heading"><span id="fire-text">ELEMENT BATTLE</span></h1>
         </div>
         <div id="fire-container">
             <button class="weapon" data-type="fire" id="fire-weapon"><img id="fire-image" src="./images/pixel-art-fire.png"></button> 
